kubernetes-manifest/nodeapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapi
  namespace: emart
  labels:
    app:  nodeapi
spec:
  selector:
    matchLabels:
      app: nodeapi
  replicas: 1
  template:
    metadata:
      labels:
        app:  nodeapi
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  nodeapi
        image:  aravindepic/nodeapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: nodeapi
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
