kubernetes-manifest/javaapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaapi-svc
  namespace: emart
spec:
  selector:
    app: javaapi
  type: ClusterIP
  ports:
    protocol: TCP
    port: 9000
    targetPort: 9000
